// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OsCondition should render one OS_LABELS 1`] = `
<div>
  <div
    data-test-subj="OsConditionMacOs"
  >
    <strong>
      <span
        class="euiExpression emotion-euiExpression-success"
        data-test-subj="osLabel"
      >
        <span
          class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
        />
         
        <span
          class="euiExpression__value emotion-euiExpression__value"
        >
          OS
        </span>
      </span>
      <span
        class="euiExpression emotion-euiExpression-success"
        data-test-subj="osValue"
      >
        <span
          class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
        >
          IS
        </span>
         
        <span
          class="euiExpression__value emotion-euiExpression__value"
        >
          Mac
        </span>
      </span>
    </strong>
  </div>
</div>
`;

exports[`OsCondition should render two OS_LABELS 1`] = `
<div>
  <div
    data-test-subj="OsConditionMacOs"
  >
    <strong>
      <span
        class="euiExpression emotion-euiExpression-success"
        data-test-subj="osLabel"
      >
        <span
          class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
        />
         
        <span
          class="euiExpression__value emotion-euiExpression__value"
        >
          OS
        </span>
      </span>
      <span
        class="euiExpression emotion-euiExpression-success"
        data-test-subj="osValue"
      >
        <span
          class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
        >
          IS
        </span>
         
        <span
          class="euiExpression__value emotion-euiExpression__value"
        >
          Mac, Windows
        </span>
      </span>
    </strong>
  </div>
</div>
`;

exports[`OsCondition should return any os sent 1`] = `
<div>
  <div
    data-test-subj="OsConditionMacOs"
  >
    <strong>
      <span
        class="euiExpression emotion-euiExpression-success"
        data-test-subj="osLabel"
      >
        <span
          class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
        />
         
        <span
          class="euiExpression__value emotion-euiExpression__value"
        >
          OS
        </span>
      </span>
      <span
        class="euiExpression emotion-euiExpression-success"
        data-test-subj="osValue"
      >
        <span
          class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
        >
          IS
        </span>
         
        <span
          class="euiExpression__value emotion-euiExpression__value"
        >
          MacPro
        </span>
      </span>
    </strong>
  </div>
</div>
`;

exports[`OsCondition should return empty body 1`] = `<div />`;
